gen/k8s/dns-cache/config/envoy.yml
{
   "layered_runtime": {
      "layers": [
         {
            "name": "static",
            "static_layer": {
               "envoy": {
                  "resource_limits": {
                     "listener": {
                        "tcp": {
                           "connection_limit": 2000
                        }
                     }
                  }
               },
               "overload": {
                  "global_downstream_max_connections": 2000
               }
            }
         }
      ]
   },
   "overload_manager": {
      "actions": [
         {
            "name": "envoy.overload_actions.shrink_heap",
            "triggers": [
               {
                  "name": "envoy.resource_monitors.fixed_heap",
                  "threshold": {
                     "value": 0.94999999999999996
                  }
               }
            ]
         },
         {
            "name": "envoy.overload_actions.stop_accepting_requests",
            "triggers": [
               {
                  "name": "envoy.resource_monitors.fixed_heap",
                  "threshold": {
                     "value": 0.97999999999999998
                  }
               }
            ]
         }
      ],
      "refresh_interval": "0.25s",
      "resource_monitors": [
         {
            "name": "envoy.resource_monitors.fixed_heap",
            "typed_config": {
               "@type": "type.googleapis.com/envoy.extensions.resource_monitors.fixed_heap.v3.FixedHeapConfig",
               "max_heap_size_bytes": 524288000
            }
         }
      ]
   },
   "static_resources": {
      "clusters": [
         {
            "connect_timeout": "0.25s",
            "load_assignment": {
               "cluster_name": "unbound",
               "endpoints": [
                  {
                     "lb_endpoints": [
                        {
                           "endpoint": {
                              "address": {
                                 "socket_address": {
                                    "address": "127.0.0.1",
                                    "port_value": 10443
                                 }
                              }
                           }
                        }
                     ]
                  }
               ]
            },
            "name": "unbound",
            "per_connection_buffer_limit_bytes": 32768,
            "transport_socket": {
               "name": "envoy.transport_sockets.tls",
               "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext",
                  "common_tls_context": {
                     "validation_context": {
                        "match_typed_subject_alt_names": [
                           {
                              "matcher": {
                                 "exact": "resolver.rubykaigi.net"
                              },
                              "san_type": "DNS"
                           }
                        ],
                        "trusted_ca": {
                           "filename": "/etc/ssl/certs/ca-certificates.crt"
                        }
                     }
                  },
                  "sni": "resolver.rubykaigi.net"
               }
            },
            "typed_extension_protocol_options": {
               "envoy.extensions.upstreams.http.v3.HttpProtocolOptions": {
                  "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions",
                  "explicit_http_config": {
                     "http2_protocol_options": {
                        "initial_connection_window_size": 1048576,
                        "initial_stream_window_size": 65536
                     }
                  }
               }
            }
         }
      ],
      "listeners": [
         {
            "address": {
               "socket_address": {
                  "address": "0.0.0.0",
                  "port_value": 11443,
                  "protocol": "TCP"
               }
            },
            "filter_chains": [
               {
                  "filters": [
                     {
                        "name": "envoy.filters.network.http_connection_manager",
                        "typed_config": {
                           "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                           "access_log": [
                              {
                                 "name": "envoy.access_loggers.file",
                                 "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                                    "path": "/dev/stdout"
                                 }
                              }
                           ],
                           "codec_type": "AUTO",
                           "common_http_protocol_options": {
                              "headers_with_underscores_action": "REJECT_REQUEST",
                              "idle_timeout": "3600s"
                           },
                           "http2_protocol_options": {
                              "initial_connection_window_size": 1048576,
                              "initial_stream_window_size": 65536,
                              "max_concurrent_streams": 100
                           },
                           "http_filters": [
                              {
                                 "name": "envoy.filters.http.router",
                                 "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                                 }
                              }
                           ],
                           "merge_slashes": true,
                           "normalize_path": true,
                           "path_with_escaped_slashes_action": "UNESCAPE_AND_REDIRECT",
                           "request_timeout": "300s",
                           "route_config": {
                              "virtual_hosts": [
                                 {
                                    "domains": [
                                       "*"
                                    ],
                                    "name": "default",
                                    "routes": [
                                       {
                                          "match": {
                                             "path": "/dns-query"
                                          },
                                          "name": "dns-query",
                                          "route": {
                                             "cluster": "unbound"
                                          }
                                       }
                                    ]
                                 }
                              ]
                           },
                           "stat_prefix": "ingress_http_tcp",
                           "stream_idle_timeout": "300s",
                           "use_remote_address": true
                        }
                     }
                  ],
                  "transport_socket": {
                     "name": "envoy.transport_sockets.tls",
                     "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext",
                        "common_tls_context": {
                           "alpn_protocols": [
                              "h2",
                              "http/1.1"
                           ],
                           "tls_certificates": [
                              {
                                 "certificate_chain": {
                                    "filename": "/secrets/tls-cert/tls.crt"
                                 },
                                 "private_key": {
                                    "filename": "/secrets/tls-cert/tls.key"
                                 }
                              }
                           ],
                           "tls_params": {
                              "tls_minimum_protocol_version": "TLSv1_3"
                           }
                        }
                     }
                  }
               }
            ],
            "listener_filters": [
               {
                  "name": "envoy.filters.listener.tls_inspector",
                  "typed_config": {
                     "@type": "type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector"
                  }
               },
               {
                  "name": "envoy.filters.listener.http_inspector",
                  "typed_config": {
                     "@type": "type.googleapis.com/envoy.extensions.filters.listener.http_inspector.v3.HttpInspector"
                  }
               }
            ],
            "name": "tcp",
            "per_connection_buffer_limit_bytes": 32768
         },
         {
            "address": {
               "socket_address": {
                  "address": "0.0.0.0",
                  "port_value": 11443,
                  "protocol": "UDP"
               }
            },
            "filter_chains": [
               {
                  "filters": [
                     {
                        "name": "envoy.filters.network.http_connection_manager",
                        "typed_config": {
                           "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                           "access_log": [
                              {
                                 "name": "envoy.access_loggers.file",
                                 "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                                    "path": "/dev/stdout"
                                 }
                              }
                           ],
                           "codec_type": "HTTP3",
                           "common_http_protocol_options": {
                              "headers_with_underscores_action": "REJECT_REQUEST",
                              "idle_timeout": "3600s"
                           },
                           "http2_protocol_options": {
                              "initial_connection_window_size": 1048576,
                              "initial_stream_window_size": 65536,
                              "max_concurrent_streams": 100
                           },
                           "http_filters": [
                              {
                                 "name": "envoy.filters.http.router",
                                 "typed_config": {
                                    "@type": "type.googleapis.com/envoy.extensions.filters.http.router.v3.Router"
                                 }
                              }
                           ],
                           "merge_slashes": true,
                           "normalize_path": true,
                           "path_with_escaped_slashes_action": "UNESCAPE_AND_REDIRECT",
                           "request_timeout": "300s",
                           "route_config": {
                              "virtual_hosts": [
                                 {
                                    "domains": [
                                       "*"
                                    ],
                                    "name": "default",
                                    "routes": [
                                       {
                                          "match": {
                                             "path": "/dns-query"
                                          },
                                          "name": "dns-query",
                                          "route": {
                                             "cluster": "unbound"
                                          }
                                       }
                                    ]
                                 }
                              ]
                           },
                           "stat_prefix": "ingress_http_udp",
                           "stream_idle_timeout": "300s",
                           "use_remote_address": true
                        }
                     }
                  ],
                  "transport_socket": {
                     "name": "envoy.transport_sockets.quic",
                     "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.transport_sockets.quic.v3.QuicDownstreamTransport",
                        "downstream_tls_context": {
                           "common_tls_context": {
                              "tls_certificates": [
                                 {
                                    "certificate_chain": {
                                       "filename": "/secrets/tls-cert/tls.crt"
                                    },
                                    "private_key": {
                                       "filename": "/secrets/tls-cert/tls.key"
                                    }
                                 }
                              ]
                           }
                        }
                     }
                  }
               }
            ],
            "name": "udp",
            "per_connection_buffer_limit_bytes": 32768,
            "udp_listener_config": {
               "downstream_socket_config": {
                  "prefer_gro": true
               },
               "quic_options": { }
            }
         }
      ]
   }
}
